apps/base/tool-nextcloud/deploy/nextcloud/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/component: nextcloud
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 33 # www-data
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: nextcloud
        image: "registry.lan/nextcloud:35.0.1-apache-custom"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /status.php
            port: web
            httpHeaders:
              - name: Host
                value: "nextcloud.tool.intra.web_domain_name"
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 750m
            memory: 512Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: nextcloud-app
          mountPath: /usr/src/nextcloud/config
          subPath: config
        - name: nextcloud-app
          mountPath: /usr/src/nextcloud/custom_apps
          subPath: custom_apps
        - name: nextcloud-app
          mountPath: /usr/src/nextcloud/themes
          subPath: themes
        - name: nextcloud-data
          mountPath: /usr/src/nextcloud/data
          subPath: data
        - name: nextcloud-config
          mountPath: /usr/src/nextcloud/config_custom/smtp_custom.config.php
          subPath: smtp_custom.config.php
        - name: nextcloud-config
          mountPath: /etc/ldap/ldap.conf
          subPath: ldap.conf
        - name: cluster-ca-volume
          mountPath: /etc/ssl/cluster/ca.crt
          subPath: ca.crt
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: nextcloud-app
        persistentVolumeClaim:
          claimName: nextcloud-app
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nfs-nextcloud
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      - name: nextcloud-config
        configMap:
          name: nextcloud-config
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
