apps/base/tool-nextcloud/deploy/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
  - port: 8080
    name: web
    targetPort: web
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: nextcloud
