apps/base/tool-nextcloud/deploy/nextcloud/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-nextcloud
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: nextcloud

  ingress:
    - ports:
        - port: web
      from:
        # Allow from the ingress controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        # Allow from task-rescheduler 
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nextcloud
              app.kubernetes.io/component: caldav-recurring-task-scheduler
